--- a/app.css
+++ b/app.css
@@ -3693,3 +3693,7 @@ div[class^="icon-remove-"]:hover * {
 .personal-information__photo img {
   width: 100%;
 }
+
+/* .bg-blue {
+  background-color: #0053f4;
+} */
